--- a/IPDC/IPDC.TalkDetailViewController.xib
+++ b/IPDC/IPDC.TalkDetailViewController.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6221" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6246"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6213"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -42,11 +42,24 @@
                 <constraint firstItem="CD8-SJ-g4h" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="hAT-KR-wTP"/>
                 <constraint firstAttribute="trailing" secondItem="CD8-SJ-g4h" secondAttribute="trailing" id="p5R-Tz-Idb"/>
                 <constraint firstAttribute="trailing" secondItem="2SL-Jz-YL9" secondAttribute="trailing" constant="8" id="ruR-B8-2LW"/>
+                <constraint firstAttribute="bottom" secondItem="CD8-SJ-g4h" secondAttribute="bottom" id="vIF-ym-fr5"/>
                 <constraint firstItem="2SL-Jz-YL9" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leadingMargin" id="ws1-Eh-0Z0"/>
             </constraints>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <nil key="simulatedBottomBarMetrics"/>
-            <variation key="heightClass=compact"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="vIF-ym-fr5"/>
+                </mask>
+            </variation>
+            <variation key="heightClass=compact">
+                <mask key="subviews">
+                    <exclude reference="2SL-Jz-YL9"/>
+                </mask>
+                <mask key="constraints">
+                    <include reference="vIF-ym-fr5"/>
+                </mask>
+            </variation>
         </view>
     </objects>
     <resources>
